force-app/main/default/objects/Data_Dictionary_Change_Log__c/Data_Dictionary_Change_Log__c.object-meta.xml
<CustomObject>
    <description>Changes to Data Dictionary Objects and Fields over time.</description>
    <label>Data Dictionary Change Log</label>
    <nameField>
        <displayFormat>DDCL-{000000}</displayFormat>
        <label>Data Dictionary Change Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Dictionary Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>