force-app/main/default/objects/Data_Dictionary_Change_Log__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field</label>
    <referenceTo>Data_Dictionary_Field__c</referenceTo>
    <relationshipLabel>Data Dictionary Change Logs</relationshipLabel>
    <relationshipName>Data_Dictionary_Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>