force-app/main/default/objects/Data_Dictionary_Change_Log__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <label>New Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>