force-app/main/default/objects/Data_Dictionary_Change_Log__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Object</label>
    <referenceTo>Data_Dictionary_Object__c</referenceTo>
    <relationshipLabel>Data Dictionary Change Logs</relationshipLabel>
    <relationshipName>Data_Dictionary_Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>