force-app/main/default/objects/Data_Dictionary_Change_Log__c/fields/Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>Prior_Value__c</fullName>
    <label>Prior Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>